feat(GIST-18): implement authentication in backend (#5)
* chore(GIST-18): add goth for authentication

* feat(GIST-18): add tokens,users,users_auth & users_token tables to migrations

* feat(GIST-18): add handlers for social auth github and gmail

* wip(GIST-18): added registration + login on github and google

* wip(GIST-18): added local auth

* wip(GIST-18): added auth middleware in front of gists domain

* docs(GIST-18): added docs for users
